--- a/src/components/Valor/style.css
+++ b/src/components/Valor/style.css
@@ -5,6 +5,9 @@
     height: 96px;
     align-items: center;
     margin-top: 16px;
+    border: 1px solid #E9ECEF;
+    border-radius: 4px;
+    margin-right: 60px;
 }
 
 .paragrafos {
@@ -29,4 +32,11 @@
     width: 155px;
     height: 22px;
     font-size: 12px;
+}
+
+@media (max-width: 600px){
+    .valorT{
+        margin: 0;
+        width: 300px;
+    }
 }
